Fix dark mode, switch language and styles

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,7 @@
 :root {
   --primary-color: #23bbc9;
   --accent-color: #057876;
+  --container-color: #057876c4;
   --text-color: #ffffff;
   --hover-color: #29edff;
   --dark-color:#ffffff;
@@ -166,7 +167,7 @@ h6 {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: rgba(255, 255, 255, 0.1);
+  background: rgba(41, 34, 31, 0.4);
   color: #fff;
   line-height: 1;
   margin-right: 8px;
@@ -198,7 +199,8 @@ h6 {
 
 @media (max-width: 992px) {
   #header h1 {
-    font-size: 36px;
+    font-size: 30px;
+    
   }
 
   #header h2 {
@@ -213,7 +215,11 @@ h6 {
   #header .container {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: center !important;
+    margin-left: auto !important;
+    margin-right: auto !important;
+    justify-content: center !important;
+    
   }
 
   .bg {
@@ -229,8 +235,7 @@ h6 {
   top: 0;
   right: 0px;
   padding-inline: 75px;
-  background: var(--accent-color);
-  opacity: 0.7;
+  background: var(--container-color);
 }
 
 #header.header-top .social-links,
@@ -260,6 +265,7 @@ h6 {
   #header.header-top h1 {
     font-size: 26px;
   }
+
 }
 
 .navbar {
@@ -418,9 +424,8 @@ section.section-show {
 }
 
 section .container {
-  background: var(--accent-color);
+  background: var(--container-color);
   padding: 30px;
-  opacity: 0.9;
 }
 
 @media (max-width: 768px) {
@@ -430,6 +435,10 @@ section .container {
 
   section.section-show {
     top: 80px;
+  }
+  .bg {
+    align-items: center !important;
+    justify-content: center !important;
   }
 }
 
@@ -527,7 +536,7 @@ svg .core circle:first-child {
 }
 
 svg .ring ellipse {
-  stroke: var(--text-color);
+  stroke: #00FFFF;
   stroke-width: 1.5px;
   fill: none;
   transform-origin: center;
@@ -606,7 +615,7 @@ padding: 20px;
   margin-top: 4%;
   margin-right: 4%;
   padding: 10px;
-  background: rgba(255, 255, 255,.2);
+  background: rgba(41, 34, 31, 0.2);
   transition: ease-in-out 0.3s;
   border-radius: 50%;
 }
